feat:代码优化体积

--- a/manifest.json
+++ b/manifest.json
@@ -137,6 +137,9 @@
         },
         "usingComponents" : true,
         "permission" : {},
+        "optimization" : {
+            "subPackages" : true
+        },
         "devServer" : {
             "port" : 8080,
             "disableHostCheck" : true,
